--- a/src/apps/robin/templates/robin/index.html
+++ b/src/apps/robin/templates/robin/index.html
@@ -4,9 +4,10 @@
 
 <div id="for-a-day" class="section"> <!--relative block zi 1 / height 100%-->
 
-    <div class="day">
-        <img src="{% static 'img/JPG/RE_Top-Pic_1920x1080.jpg' %}" class="img" sizes="100vh">
-    </div>
+    <!--<div class="day">-->
+    <!--<img src="{% static 'img/JPG/RE_Top-Pic_1920x1080.jpg' %}" class="img" sizes="100vh">-->
+        <div class="image"></div>
+        <!--</div>-->
 
     <div class="section-inner">
 
