--- a/src/apps/robin/static/robin/scss/index.scss
+++ b/src/apps/robin/static/robin/scss/index.scss
@@ -13,8 +13,8 @@
 ::-webkit-scrollbar {
     width: 10px;
 }
- 
-::-webkit-scrollbar-track {
+
+ ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     border-radius: 10px;
     background: white;
@@ -80,11 +80,15 @@ p  {
     @include shadow;
 }
 
-.day img {
-    min-width: 100%;
-    position: absolute;
-    top: -25%;
-    left: 0;
+.day {
+    position: relative;
+    height: 100%;
+}
+
+.image {
+    background: url('../../img/JPG/RE_Top-Pic_1920x1080.jpg');
+    background-size: cover;
+    @include centrizeImage(-1, 100%);
 }
 
 #foto .title-h1 {
@@ -213,6 +217,8 @@ p  {
     font-size: 18px;
     font-size: 1.125rem;
     line-height: 1;
+    @include font-size(18px, 24px);
+    
 }
 
 .why {
